<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:layoutAnimation="@anim/slide_from_left_layout"
    tools:context=".fragments.ChatSettingFragment">

    <Toolbar
        android:id="@+id/chat_page_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/chat_setting_back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/chat_setting"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/chat_setting_back_iv"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/group_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_page_actionbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/group_image_iv"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/profile_pic" />

        <ImageButton
            android:id="@+id/edit_group_image_ib"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/ic_circle"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ProgressBar
            android:id="@+id/img_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:indeterminateTint="@color/main_btns_color"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/group_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_image_layout"
        tools:text="Group title" />

    <TextView
        android:id="@+id/group_title_edit_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/edit"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/group_title_tv"
        app:layout_constraintTop_toBottomOf="@+id/group_image_layout" />

    <TextView
        android:id="@+id/group_members_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/members"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_title_tv" />

    <TextView
        android:id="@+id/view_group_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp"
        android:text="@string/view"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_title_tv" />

    <ImageView
        android:id="@+id/add_group_member_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toStartOf="@+id/view_group_members"
        app:layout_constraintTop_toBottomOf="@+id/group_title_tv"
        app:tint="@color/light_blue" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_members_rv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_members_tv" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:indeterminateTint="@color/main_btns_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_members_tv" />

    <TextView
        android:id="@+id/chat_theme_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/theme"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_members_rv" />

    <TextView
        android:id="@+id/view_group_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_14sdp"
        android:text="@string/view"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/light_blue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_members_rv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/group_theme_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chat_theme_tv" />

    <TextView
        android:id="@+id/delete_chat_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:foreground="?selectableItemBackground"
        android:text="@string/exit_group"
        android:textColor="@color/red"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_theme_rv" />


</androidx.constraintlayout.widget.ConstraintLayout>