<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    android:layoutAnimation="@anim/slide_from_left_layout"
    tools:context=".fragments.ProfileFragment">

    <Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_toolbar_username_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/app_name"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/saved_posts_iv"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/bookmark_icon" />
        </RelativeLayout>
    </Toolbar>

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
        android:backgroundTint="@color/white"
        android:indeterminate="true"
        android:indeterminateTint="@color/main_btns_color"
        android:max="100"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_profile_image_cl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_profile_image_iv"
            android:layout_width="@dimen/_65sdp"
            android:layout_height="@dimen/_65sdp"
            android:layout_margin="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/edit_profile_image_ib"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_4sdp"
            android:background="@drawable/ic_circle"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_following_counter_cl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/profile_status_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_profile_image_cl"
        app:layout_constraintTop_toBottomOf="@id/profile_toolbar">

        <TextView
            android:id="@+id/profile_following_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Following"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/profile_followers_counter_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_followers_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Followers"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/profile_posts_counter_tv"
            app:layout_constraintStart_toEndOf="@+id/profile_following_counter_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_posts_counter_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:text="Posts"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_followers_counter_tv"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_following_counts_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            tools:text="300"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/profile_followers_counts_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_followers_counter_tv" />

        <TextView
            android:id="@+id/profile_followers_counts_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            tools:text="200"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/profile_posts_counts_tv"
            app:layout_constraintStart_toEndOf="@+id/profile_following_counts_tv"
            app:layout_constraintTop_toBottomOf="@+id/profile_followers_counter_tv" />

        <TextView
            android:id="@+id/profile_posts_counts_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            tools:text="100"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_followers_counts_tv"
            app:layout_constraintTop_toBottomOf="@+id/profile_posts_counter_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/profile_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:maxWidth="@dimen/_100sdp"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_profile_image_cl"
        tools:text="care about moza more plz" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_follow_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_transparent_btns"
        android:fontFamily="@font/allerta"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/_15sdp"
        android:text="Follow"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_chat_btn"
        app:layout_constraintTop_toBottomOf="@+id/profile_status_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_edit_btn"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/outlined_gray_search_bg"
        android:backgroundTint="#757575"
        android:fontFamily="@font/allerta"
        android:layout_margin="@dimen/_10sdp"
        android:foreground="?selectableItemBackground"
        android:text="Edit profile"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_status_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/profile_chat_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/rounded_transparent_btns"
        android:fontFamily="@font/allerta"
        android:foreground="?selectableItemBackground"
        android:padding="@dimen/_15sdp"
        android:text="@string/say_hi"
        android:textColor="@color/main_btns_color"
        android:visibility="gone"
        android:textSize="@dimen/_11sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/profile_follow_btn"
        app:layout_constraintTop_toBottomOf="@+id/profile_status_tv" />


    <View
        android:id="@+id/seperate_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@color/secondary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_status_tv" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profile_posts_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="?actionBarSize"
        android:visibility="gone"
        android:layoutAnimation="@anim/slide_from_left_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperate_line" />

    <ImageView
        android:id="@+id/no_posts_iv"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_200sdp"
        android:src="@drawable/no_posts_yet_image"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperate_line"
        app:tint="@color/secondary_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/private_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperate_line" >

        <ImageView
            android:id="@+id/private_profile_iv"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@drawable/private_profile_lock"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/private_profile_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_profile_title"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@+id/private_profile_iv"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/private_profile_info"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintStart_toEndOf="@+id/private_profile_iv"
            app:layout_constraintTop_toBottomOf="@+id/private_profile_title_tv"
            app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>